いろいろ学んだ

--- a/数独.html
+++ b/数独.html
@@ -38,6 +38,7 @@
                 <p id="comment"></p>
             </div>
             <button id="retry" class="btn" onclick="resetGame()">リトライ</button>
+            <button id="tweet" class="btn" style="display: none;" onclick="tweetResult()">結果をXに投稿</button>
         </div>
     </div>
     <script src="comments.js"></script>
