いろいろ学んだ

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <p id="message"></p>
             <p id="total">現在の合計: 0</p>
             <div class="buttons">
-                <button id="btn1" class="btn" onclick="playerTurn(1)" disabled>+1</button>
-                <button id="btn2" class="btn" onclick="playerTurn(2)" disabled>+2</button>
-                <button id="btn3" class="btn" onclick="playerTurn(3)" disabled>+3</button>
+                <button id="btn1" class="btn" onclick="playerTurn(1)">+1</button>
+                <button id="btn2" class="btn" onclick="playerTurn(2)">+2</button>
+                <button id="btn3" class="btn" onclick="playerTurn(3)">+3</button>
             </div>
             <img id="character-image" src="images/shinosawa_tujo.jpeg" alt="篠澤広" class="character-image">
             <div id="shinosawa-message-box">
@@ -37,8 +37,8 @@
             <div id="text-box">
                 <p id="comment"></p>
             </div>
-            <button id="retry" class="btn" onclick="resetGame()">リトライ</button>
-            <button id="tweet" class="btn" style="display: none;" onclick="tweetResult()">結果をXに投稿</button>
+            <button id="retry" class="btn" onclick="location.reload()">リトライ</button>
+            <button id="tweet" class="btn" onclick="tweetResult()" style="display: none;">結果をXに投稿</button>
         </div>
     </div>
     <script src="comments.js"></script>
