いろいろ学んだ

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
             <div id="text-box">
                 <p id="comment"></p>
             </div>
-            <button id="retry" class="btn" onclick="location.reload()">リトライ</button>
-            <button id="tweet" class="btn" onclick="tweetResult()" style="display: none;">結果をXに投稿</button>
+            <div class="retry-tweet-container">
+                <button id="retry" class="btn" onclick="location.reload()">リトライ</button>
+                <button id="tweet" class="btn" onclick="tweetResult()" style="display: none;">結果をXに投稿</button>
+            </div>
         </div>
     </div>
     <script src="comments.js"></script>
