いろいろ学んだ

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>20を数えたら負けゲーム</h1>
         <div id="janken-game">
-            <p id="janken-message">じゃんけんで勝った方が先攻ね。</p>
+            <p id="janken-message">作・絵:宮澤琉世 @RyuseiMiyazawa  <br> <br> じゃんけんで勝った方が先攻ね。</p>
             <div class="buttons">
                 <button id="rock" class="btn" onclick="janken('グー')">👊</button>
                 <button id="scissors" class="btn" onclick="janken('チョキ')">✌️</button>
