いろいろ学んだ

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>20を数えたら負けゲーム</title>
+    <title>篠澤と20を数えたら負けゲーム</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>20を数えたら負けゲーム</h1>
+        <h1>篠澤と20を数えたら負けゲーム</h1>
         <div id="janken-game">
             <p id="janken-message">作・絵:宮澤琉世 @RyuseiMiyazawa  <br> BGM SE:Phalene様 効果音ラボ<br><br> じゃんけんで勝った方が先攻ね。</p>
             <div class="buttons">
